# hackharvard2025

./: ELEVENLABS_SETUP.md  README.md  index.html  package-lock.json  package.json
aslalphabet/: README.md  hand_detection.py  package-lock.json  requirements.txt  visualize_landmarks.py
aslalphabet/hand_landmarks/: a_hand_landmarks.json  c_hand_landmarks.json  e_hand_landmarks.json  g_hand_landmarks.json  i_hand_landmarks.json  l_hand_landmarks.json  o_hand_landmarks.json  p_hand_landmarks.json  t_hand_landmarks.json  x_hand_landmarks.json  z_hand_landmarks.json
aslalphabet/live_landmarks/: live_hand_landmarks.json
backend/: API_CLEANUP_SUMMARY.md  PREDICTION_FIXES.md  PREDICT_LETTER_ENDPOINT.md  README.md  main.py  pyproject.toml  sign_language_model.py  start.sh  test_components.py
backend/classifier_tools/: live_hand_tracker.py
backend/classifier_tools/hand_landmarks/: b_hand_landmarks.json  d_hand_landmarks.json  f_hand_landmarks.json  h_hand_landmarks.json  j_hand_landmarks.json  k_hand_landmarks.json  m_hand_landmarks.json  n_hand_landmarks.json  q_hand_landmarks.json  r_hand_landmarks.json  s_hand_landmarks.json  u_hand_landmarks.json  v_hand_landmarks.json  w_hand_landmarks.json  y_hand_landmarks.json
frontend/: ELEVENLABS_SETUP.md  MEDIAPIPE_SETUP.md  README.md  README_PREDICTION_INTEGRATION.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ElevenLabsTextToSpeech.tsx  MediaPipeFaceLandmarker.tsx  MediaPipeHandLandmarker.tsx  PredictionDisplay.tsx  TextToSpeech.tsx
src/: App.tsx  index.css
(+10 files in other folders)
